// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: ShareModal should render correctly when open 1`] = `
<React.Fragment>
  <Button
    fullWidth={true}
    id="shareModalButton"
    onClick={[Function]}
    size="default"
  >
    Share
  </Button>
  <Modal
    onClose={[Function]}
    open={true}
  >
    <WindowEvent
      event="keydown"
      handler={[Function]}
    />
    <Panel
      title="Share this report"
    >
      <Panel.Section>
        <CopyField
          hideCopy={false}
          value="http://phoenix.test/?range=custom&recipients=one%40test.com&recipients=two%2B2%40test.com"
        />
        <Checkbox
          checked={true}
          helpText={
            <span>
              Pins this report's relative time range to its calculated dates (this is usually what you want when sharing a report).
            </span>
          }
          id="pin-relative-link"
          label="Pin dates for this link"
          onChange={[Function]}
        />
      </Panel.Section>
      <Panel.Section>
        <Button
          onClick={[Function]}
          primary={true}
          size="default"
        >
          Done
        </Button>
      </Panel.Section>
    </Panel>
  </Modal>
</React.Fragment>
`;

exports[`Component: ShareModal should render with a valid relative range 1`] = `
<React.Fragment>
  <Button
    fullWidth={true}
    id="shareModalButton"
    onClick={[Function]}
    size="default"
  >
    Share
  </Button>
  <Modal
    onClose={[Function]}
    open={false}
  >
    <Panel
      title="Share this report"
    >
      <Panel.Section>
        <CopyField
          hideCopy={false}
          value="http://phoenix.test/?range=custom&recipients=one%40test.com&recipients=two%2B2%40test.com"
        />
        <Checkbox
          checked={true}
          helpText={
            <span>
              Pins this report's relative time range to its calculated dates (this is usually what you want when sharing a report).
            </span>
          }
          id="pin-relative-link"
          label="Pin dates for this link"
          onChange={[Function]}
        />
      </Panel.Section>
      <Panel.Section>
        <Button
          onClick={[Function]}
          primary={true}
          size="default"
        >
          Done
        </Button>
      </Panel.Section>
    </Panel>
  </Modal>
</React.Fragment>
`;

exports[`Component: ShareModal should unpin when clicking the checkbox 1`] = `"http://phoenix.test/?range=custom&recipients=one%40test.com&recipients=two%2B2%40test.com"`;

exports[`Component: ShareModal should unpin when clicking the checkbox 2`] = `"http://phoenix.test/?range=valid&recipients=one%40test.com&recipients=two%2B2%40test.com"`;
